# libefp

./: .gitignore  .nfs0000000057b340be0002fa24  CMakeLists.txt  CONTRIBUTORS  EFP2.C  EFP2.h  README-torch.md  README.md  README.txt  README_2  bell_module.sh  cmrun.sh  cmrun2.sh  comp.log.May28  compilation.log.mac  compile.sh  cpp.sh  gil_module.sh  git_help  make_conda_env.md  module.sh  setup.csh  setup.sh  setup2.sh  torch.sh
efpmd/: CMakeLists.txt  Makefile
efpmd/c_wrap_torch/: CMakeLists.txt  README
efpmd/c_wrap_torch/scripts/: bootstrap-linux-libtorch.sh
efpmd/c_wrap_torch/src/: blah  c_libtorch.cc_orig  c_libtorch.h_orig  my_autograd.cc  my_autograd.h
efpmd/c_wrap_torch/tests/: CMakeLists.txt  blah  blah.c  blah2  test-c-libtorch.c  test2_nn.c  test_ani2.c  test_grad.c  test_load_enforce.c  test_molecule.c  test_nn.c  test_nn_grad.c  test_nnp.c  test_spec_enforce.c  tst-autograd.c
efpmd/libff/: CMakeLists.txt
efpmd/libopt/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  opt.c
efpmd/libopt/libff/: Makefile  cmake_install.cmake
efpmd/libopt/libopt/: Makefile  cmake_install.cmake
efpmd/src/: NotUsedCMakeLists.txt  anitest.cpp  apr15_md.c  apr28_md.c  autodiff.c  autodiff.h  blah  clib.c  clib.h  common.c  common.c_orig  common.h  common.h_orig  dbl_torch.c  efield.c  energy.c  energy.c_orig  example.txt  float_torch.c  grad.c  gtest.c  hess.c  main.c  main.c_orig  mc.c  md.c  md_mar6.c  mehh_energy.c  opt.c  opt.c_orig  parse.c  skp_energy.c  sp.c  torch.c  torch.h
efpmd/torch/: .nfs00000000662e58eb000039a4  .nfs00000000662e5a7a000039a5  .nfs0000000070d2ccc00001b096  .nfs0000000070d2d1a80001b0a2  ANIModel.h  CMakeLists.txt  c_libtorch.cc  c_libtorch.h  og_c_libtorch.cc  torch.c  torch.h
fraglib/: ch2o_lj.efp  h2o_polab.efp
python/: CMakeLists.txt  conf.sh  core.cc  py.sh  up_core.cc  up_wrapper.py  wrapper.py
skp_tst/: Tirth_skp_output  behh  blah  blah2  ctor.in  elpot.in  frag_elpot.in  g_test  gtest.skp  hmm  hmm2  hmm3  loadout  md_1.in  md_out  mehh  opt_1.in  opt_tst.in  out  skp_out  submitter.sh  tskp_out  tstout
src/: CMakeLists.txt  Makefile  cmake_install.cmake  disp.c  efp.c  efp.h  efp.h_orig  elec.c  mathutil.h  parse.c  pol.c  private.h  stream.c  terms.h  util.c  util.h  xr.c
tests/: CMakeLists.txt  Makefile  ani_efp_mlmd.in  ani_efp_mlmd.out.xyz  ani_mm_mlmd.in  ani_mm_mlmd.out.xyz  apr3_output  ase_nve  atom_coord.in  atom_coord.out.x  atom_coord.out.y  atom_coord_2.in  check_water  check_water.xyz  check_water2  check_water2.xyz  constraint_1.out.x  constraint_1.out.y  constraint_2.out.x  constraint_2.out.y  constraint_3.out.x  constraint_3.out.y  difa  disp_1a.out.x  disp_1a.out.y  disp_1b.out.x  disp_1b.out.y  disp_1c.out.x  disp_1c.out.y  disp_2a.out.x  disp_2a.out.y  disp_2b.out.x  disp_2b.out.y  (+304 more)
(+45 files in other folders)
